@@ -338,6 +338,11 @@ Newer Prolific firmware requires a modified command which can be selected by
 \'\-d usbjmicron,p\'.
 Note that this does not yet support the SMART status command.
 
+.I usbprolific
+\- this device type is for SATA disks that are behind a Prolific P2773 USB to
+SATA bridge. This driver may work with other Prolific P277x devices - this is
+however untested.
+
 .I usbsunplus
 \- this device type is for SATA disks that are behind a SunplusIT USB to SATA
 bridge.
